modified the answer on interview question blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -89,7 +89,7 @@ title : Web前端的一些面试考察的知识点
 
 <p>1. 闭包的理解，javascript的作用域（高频率）</p>
 
-<p>先来回答javascript作用域的问题,javascript语言没有会计作用域，只有一条从内向外的作用域链，看个例子
+<p>先来回答javascript作用域的问题,javascript语言没有块级作用域，只有一条从内向外的作用域链，看这个例子
 </p>
 <p>
 	{% highlight javascript %}
