--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -6,88 +6,88 @@ title : Web前端的一些面试考察的知识点
 
 
 
-<h3>Web前端的一些面试考察的知识点</h3>
+<h3>HTML:</h3>
 
 
 
 
 
-<h4>HTML:</h4>
-<p>1.  什么是语义化的HTML?有何意义？为什么要做到语义化？（高频率考题）</p>
+<h4>1.  什么是语义化的HTML?有何意义？为什么要做到语义化？（高频率考题）</h4>
 
 
-<p>2.  行内元素和块元素分别有哪些？（高频率）</p>
+<h4>2.  行内元素和块元素分别有哪些？（高频率）</h4>
 
 
 
-<p>3.  严格模式与混杂模式的区分？如何触发这两种模式？（高频率）</p>
+<h4>3.  严格模式与混杂模式的区分？如何触发这两种模式？（高频率）</h4>
 
 
-<p>4.  Doctype 是什么？有啥作用</p>
+<h4>4.  Doctype 是什么？有啥作用</h4>
  
 
-<p>5.  HTML与XHTML的区别</p>
+<h4>5.  HTML与XHTML的区别</h4>
 
 
-<p>6.  HTML5以什么标签开头？</p>
+<h4>6.  HTML5以什么标签开头？</h4>
 
 
-<p>7.  Div与span的区别</p>
+<h4>7.  Div与span的区别</h4>
 
 
-<p>8.  Img的alt和title有啥区别？各自作用？</p>
+<h4>8.  Img的alt和title有啥区别？各自作用？</h4>
 
 
-<p>9.  HTML5的离线储存</p>
+<h4>9.  HTML5的离线储存</h4>
 
-<p>10. iframe有那些缺点？</p>
-
-
-
-
-
-<h4>CSS:</h4>
-
-<p>1. CSS盒模型原理（高频率）</p>
-
-<p>2. CSS的导入方式：import与link方式的区别？优缺点？（高频率）</p>
-
-<p>3. CSS的优先级？内联和important哪个优先级高？（高频率）</p>
-
-
-<p>4. 盒子垂直居中方法（高频率）</p>
-
-
-<p>5. 浮动元素清除浮动方法（高频率）</p>
-
-<p>6. 常见兼容性问题（高频率）</p>
-
-
-<p>7. CSS的定位属性，各自区别，应用场景</p>
-
-
-<p>8. 谈谈CSS3 Media Queries</p>
-
-
-<p>9. Diplay:none与visibility：hidden的区别（高频率）</p>
-
-
-<p>10.谈谈CSS hack</p>
-
-
-<p>11.CSS中em和px的关系和区别</p>
-
-
-
-
-<h4>Javascript：</h4>
+<h4>10. iframe有那些缺点？</h4>
 
 
 
 
 
 
-<p>1. 闭包的理解，javascript的作用域（高频率）</p>
+
+<h3>CSS:</h3>
+
+<h4>1. CSS盒模型原理（高频率）</h4>
+
+<h4>2. CSS的导入方式：import与link方式的区别？优缺点？（高频率）</h4>
+
+<h4>3. CSS的优先级？内联和important哪个优先级高？（高频率）</h4>
+
+
+<h4>4. 盒子垂直居中方法（高频率）</h4>
+
+
+<h4>5. 浮动元素清除浮动方法（高频率）</h4>
+
+<h4>6. 常见兼容性问题（高频率）</h4>
+
+
+<h4>7. CSS的定位属性，各自区别，应用场景</h4>
+
+
+<h4>8. 谈谈CSS3 Media Queries</h4>
+
+
+<h4>9. Diplay:none与visibility：hidden的区别（高频率）</h4>
+
+
+<h4>10.谈谈CSS hack</h4>
+
+
+<h4>11.CSS中em和px的关系和区别</h4>
+
+
+
+
+<h3>Javascript：</h3>
+
+
+
+
+
+<h4>1. 闭包的理解，javascript的作用域（高频率）</h4>
 
 <p>先来回答javascript作用域的问题,javascript语言没有块级作用域，只有一条从内向外的作用域链，看这个例子
 </p>
@@ -148,61 +148,61 @@ CheckScope();
 
 
 
-<p>2. Ajax的跨域问题和缓存原理？同步与异步的区别？（高频率）</p>
+<h4>2. Ajax的跨域问题和缓存原理？同步与异步的区别？（高频率）</h4>
 
-<p>3. 数组的增删查找（高频率）</p>
+<h4>3. 数组的增删查找（高频率）</h4>
 
 
-<p>4. DOM节点的创建、移动、复制、删除、查找。（高频率）</p>
+<h4>4. DOM节点的创建、移动、复制、删除、查找。（高频率）</h4>
 
 
-<p>5. SetTimeout与setInterval区别</p>
+<h4>5. SetTimeout与setInterval区别</h4>
 
 
-<p>6. 面向对象编程:b怎么继承a</p>
+<h4>6. 面向对象编程:b怎么继承a</h4>
 
 
-<p>7. 编写一个JavaScript函数 parseQueryString，它的用途是把URL参数解析为一个对象varobj = parseQueryString(url);
-alert(obj.key0)  // 输出0</p>
+<h4>7. 编写一个JavaScript函数 parseQueryString，它的用途是把URL参数解析为一个对象varobj = parseQueryString(url);
+alert(obj.key0)  // 输出0</h4>
 
 
 
-<p>8. JS关键字与保留字的选择：parent，class，void,main。</p>
+<h4>8. JS关键字与保留字的选择：parent，class，void,main。</h4>
 
 
-<p>9. ajax属于javascript？</p>
+<h4>9. ajax属于javascript？</h4>
 
 
-<p>10.Var a = ‘abc def ghi’,把每三个字中的首字母转为大写。</p>
+<h4>10.Var a = ‘abc def ghi’,把每三个字中的首字母转为大写。</h4>
 
 
 
 
-<p>11.Ajax的执行过程</p>
+<h4>11.Ajax的执行过程</h4>
 
 
-<p>12.JSON与XML的区别？优缺点？</p>
+<h4>12.JSON与XML的区别？优缺点？</h4>
 
-<p>13.写一个tab菜单切换程序</p>
+<h4>13.写一个tab菜单切换程序</h4>
 
 
-<p>14.写一个点击input能够弹出当前input索引的函数</p>
+<h4>14.写一个点击input能够弹出当前input索引的函数</h4>
 
 
 
 
-<p>15.==与===的区别</p>
+<h4>15.==与===的区别</h4>
 
 
-<p>16.Null与undefined的区别</p>
+<h4>16.Null与undefined的区别</h4>
 
 
-<p>17.Js如何实现多重继承</p>
+<h4>17.Js如何实现多重继承</h4>
 
 
-<p>18.Eval是啥？谈谈对它的理解</p>
+<h4>18.Eval是啥？谈谈对它的理解</h4>
 
-<p>19.事件、IE与火狐的事件机制有什么区别？</p>
+<h4>19.事件、IE与火狐的事件机制有什么区别？</h4>
 
 
 
@@ -210,55 +210,60 @@ alert(obj.key0)  // 输出0</p>
 
 
 
-<h4>其他</h4>
 
 
-<p>1. 对bootstrap的理解（高频率）</p>
+<h3>其他</h3>
 
-<p>2. 网站性能优化的方法（高频率）</p>
 
-<p>3. 响应式布局（高频率）</p>
 
 
-<p>4. 前端由哪些部分组成（高频率）</p>
 
-<p>5. W3C标准是啥</p>
+<h4>1. 对bootstrap的理解（高频率）</h4>
 
+<h4>2. 网站性能优化的方法（高频率）</h4>
 
-<p>6. 渐进增强与优雅降级的理解</p>
+<h4>3. 响应式布局（高频率）</h4>
 
 
+<h4>4. 前端由哪些部分组成（高频率）</h4>
 
-<p>7. 为什么利用多个域名来提供网站资源会更有效？</p>
+<h4>5. W3C标准是啥</h4>
 
 
+<h4>6. 渐进增强与优雅降级的理解</h4>
 
 
 
-<p>8. http中的404状态码是什么意思</p>
+<h4>7. 为什么利用多个域名来提供网站资源会更有效？</h4>
 
 
 
-<p>9. 常用的测试工具、开发工具有哪些？</p>
 
 
-<p>10.Jpeg、gif、png格式的优缺点，应用场景</p>
+<h4>8. http中的404状态码是什么意思</h4>
 
 
-<p>11.谈谈对前端的理解</p>
 
+<h4>9. 常用的测试工具、开发工具有哪些？</h4>
 
-<p>12.你认为做前端最需要的品质</p>
 
+<h4>10.Jpeg、gif、png格式的优缺点，应用场景</h4>
 
 
+<h4>11.谈谈对前端的理解</h4>
 
 
-<p>13.你最近看过的文章是什么</p>
+<h4>12.你认为做前端最需要的品质</h4>
 
 
 
-<p>14.有没有逛技术网站的习惯？请列举这些网站</p>
+
+
+<h4>13.你最近看过的文章是什么</h4>
+
+
+
+<h4>14.有没有逛技术网站的习惯？请列举这些网站</h4>
 
 
 
