add a answer on interview question blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -6,9 +6,14 @@ title : Web前端的一些面试考察的知识点
 
 
 
+
+
+
+
+
+
+
 <h3>HTML:</h3>
-
-
 
 
 
@@ -38,7 +43,7 @@ title : Web前端的一些面试考察的知识点
 
 
 <h4>9.  HTML5的离线储存</h4>
-
+<p>LocalStorage——为HTML5的离线储存的API。</p>
 
 
 <h4>10. iframe有那些缺点？</h4>
@@ -49,7 +54,27 @@ title : Web前端的一些面试考察的知识点
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <h3>CSS:</h3>
+
+
+
+
+
 
 <h4>1. CSS盒模型原理（高频率）</h4>
 
@@ -79,6 +104,26 @@ title : Web前端的一些面试考察的知识点
 
 
 <h4>11.CSS中em和px的关系和区别</h4>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -205,6 +250,36 @@ alert(obj.key0)  // 输出0</h4>
 <h4>18.Eval是啥？谈谈对它的理解</h4>
 
 <h4>19.事件、IE与火狐的事件机制有什么区别？</h4>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
