--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -1,12 +1,12 @@
 ---
 layout: default_post
-title : Html5的新思维
+title : Html5的新特性
 ---
 
 
 
 
-<h3>Html5的新思维</h3>
+<h3>Html5的新特性</h3>
 
 
 
@@ -15,15 +15,12 @@ title : Html5的新思维
 <p>通俗的来说：HTML5 是对 HTML 标准的第五次修订，目前仍未完工。其主要的目标是将互联网语义化，以便更好地被人类和机器阅读，并同时提供更好地支持各种媒体的嵌入。</p>
 
 
-<!-- 
-<p>具体来说，HTML5添加了许多新的语法特征，其中包括<code><video></code>, <code><audio></code>,和<code><canvas></code>元素，同时集成了SVG内容。这些元素是为了更容易的在网页中添加和处理多媒体和图片内容而添加的。</p> -->
 
-<!-- 
-<p>具体来说，HTML5添加了许多新的语法特征，其中包括<pre><video></pre>, <pre><audio></pre>,和<pre><canvas></pre>元素，同时集成了SVG内容。这些元素是为了更容易的在网页中添加和处理多媒体和图片内容而添加的。</p>
-<p>其它新的元素包括<pre><section></pre>, <pre><article></pre>, <pre><header></pre>, 和<pre><nav></pre>,是为了丰富文档的数据内容。新的属性的添加也是为了同样的目的。</p>
-<p>同时也有一些属性和元素被卸载掉了。一些元素，像<pre><a></pre>, 和<pre><menu></pre>被修改，重新定义或标准化了。同时APIs和DOM已经成为HTML5中的基础部分了。</p>
+<p>具体来说，HTML5添加了许多新的语法特征，其中包括video标签, audio标签,和canvas标签，同时集成了SVG内容。这些元素是为了更容易的在网页中添加和处理多媒体和图片内容而添加的。</p>
+<p>其它新的元素包括section标签, article标签, header标签, 和nav标签,是为了丰富文档的数据内容。新的属性的添加也是为了同样的目的。</p>
+<p>同时也有一些属性和元素被卸载掉了。一些元素，像a标签, 和menu标签被修改，重新定义或标准化了。同时APIs和DOM已经成为HTML5中的基础部分了。</p>
 
- -->
+
 
 
 <p>下面的一段代码展示了一体个基本的Html5页面的结构</p>
