modified html5 blog

--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -12,11 +12,12 @@ title : Html5的新特性
 
 
 <p>根据 <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank">Mozilla基金会</a>	的定义，原文如下：HTML5 is the latest evolution of the standard that defines HTML.</p>
-<p>通俗的来说：HTML5 是对 HTML 标准的第五次修订，目前仍未完工。其主要的目标是将互联网语义化，以便更好地被人类和机器阅读，并同时提供更好地支持各种媒体的嵌入。</p>
+<p>准确的来说：HTML5 是 HTML 标准的最新演进版本，即是对 HTML 标准的第五次修订，目前仍未完工。其主要的目标是将互联网语义化，以便更好地被人类和机器阅读，并同时提供更好地支持各种媒体的嵌入。</p>
+
+<p>通俗的理解：<strong>就是在html4标准之上添加了一些新的标签（具有属性和行为）。</strong></p>
 
 
-
-<p>具体来说，HTML5添加了许多新的语法特征，其中包括video标签, audio标签,和canvas标签，同时集成了SVG内容。这些元素是为了更容易的在网页中添加和处理多媒体和图片内容而添加的。</p>
+<p>那HTML5 到底添加了哪些标签呢？举例来说有video标签, audio标签,和canvas标签，同时也集成了SVG内容。这些元素是为了更容易的在网页中添加和处理多媒体和图片内容而添加的。</p>
 <p>其它新的元素包括section标签, article标签, header标签, 和nav标签,是为了丰富文档的数据内容。新的属性的添加也是为了同样的目的。</p>
 <p>同时也有一些属性和元素被卸载掉了。一些元素，像a标签, 和menu标签被修改，重新定义或标准化了。同时APIs和DOM已经成为HTML5中的基础部分了。</p>
 
@@ -62,6 +63,7 @@ Your browser does not support the video tag.
 
 
 
+<p class="pege_tail">参考<a href="https://developer.mozilla.org/zh-CN/docs/Web/Guide/HTML/HTML5" target="_blank">Mozilla基金会</a></p>
 
 
 
