modified html5 blog

--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -63,6 +63,34 @@ Your browser does not support the video tag.
 
 
 
+
+<h3>语义类</h3>
+
+
+
+<h4>HTML5 中的节段和外观概要</h4>
+<p>HTML5 中新的外观概要和节段元素一览: section, article, nav, header, footer, aside 和 hgroup.</p>
+
+
+
+<h4>使用 HTML5 的音频和视频</h4>
+<p>audio 和 video 元素嵌入并能够操作新的多媒体内容。</p>
+
+
+<h4>HTML5 的表单</h4>
+<p>看一下 HTML5 中对 web 表单的改进：约束确认 API，一些新的属性，input 属性的一些新值 type 和新的 output 元素。</p>
+
+
+
+
+
+
+
+
+
+
+
+
 <p class="pege_tail">参考<a href="https://developer.mozilla.org/zh-CN/docs/Web/Guide/HTML/HTML5" target="_blank">Mozilla基金会</a></p>
 
 
