modified html5 blog

--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -81,6 +81,18 @@ Your browser does not support the video tag.
 <p>看一下 HTML5 中对 web 表单的改进：约束确认 API，一些新的属性，input 属性的一些新值 type 和新的 output 元素。</p>
 
 
+<h4>新的语义元素</h4>
+<p>除了区段，媒体和表单元素之外，众多的新元素，像 mark， figure， figcaption， data， time， output， progress， 或者 meter，也增加了有效的 HTML5 元素的数量。</p>
+
+
+<h4>iframe 的改进</h4>
+<p>使用 sandbox， seamless， 和 srcdoc 属性，作者们现在可以精确控制 iframe 元素的安全级别以及期望的渲染。</p>
+
+
+
+
+<h4>MathML</h4>
+<p>允许直接嵌入数学公式。</p>
 
 
 
