modofied html5 blog

--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -95,8 +95,8 @@ Your browser does not support the video tag.
 <p>允许直接嵌入数学公式。</p>
 
 
-
-
+<h4>HTML5 兼容的解析器</h4>
+<p>用于把 HTML5 文档的字节转换成 DOM 的解释器，已经被扩展了，并且现在精确地定义了在所有情况下使用的行为，甚至当碰到无效的 HTML 这种情况。这就导致了 HTML5 兼容的浏览器之间极大的可预测性和互操作性。</p>
 
 
 
