--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -103,6 +103,36 @@ Your browser does not support the video tag.
 
 
 
+
+
+
+<h3>连通性</h3>
+
+
+<h4>Web Sockets</h4>
+<p>允许在页面和服务器之间建立持久连接并通过这种方法来交换非 HTML 数据。</p>
+
+
+<h4>Server-sent events</h4>
+<p>允许服务器向客户端推送事件，而不是仅在响应客户端请求时服务器才能发送数据的传统范式。</p>
+
+
+<h4>WebRTC</h4>
+<p>这项技术，其中的 RTC 代表的是即时通信，允许连接到其他人，直接在浏览器中控制视频会议，而不需要一个插件或是外部的应用程序。</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <p class="pege_tail">参考<a href="https://developer.mozilla.org/zh-CN/docs/Web/Guide/HTML/HTML5" target="_blank">Mozilla基金会</a></p>
 
 
