modified html5 blog

--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -125,6 +125,65 @@ Your browser does not support the video tag.
 
 
 
+<h3>离线存储</h3>
+
+
+
+
+<h4>离线资源：应用程序缓存</h4>
+<p>火狐全面支持 HTML5 离线资源规范。其他大多数针对离线资源仅提供了某种程度上的支持。</p>
+
+
+<h4>在线和离线事件</h4>
+<p>火狐 3 支持 WHATWG 在线和离线事件，这可以让应用程序和扩展检测是否存在可用的网络连接，以及在连接建立和断开时能感知到。</p>
+
+
+
+
+<h4>WHATWG 客户端会话和持久化存储 (又名 DOM 存储)</h4>
+<p>客户端会话和持久化存储让 web 应用程序能够在客户端存储结构化数据。</p>
+
+
+
+<h4>IndexedDB</h4>
+<p>是一个为了能够在浏览器中存储大量结构化数据，并且能够在这些数据上使用索引进行高性能检索的 web 标准。</p>
+
+
+
+
+
+
+
+<h4>自 web 应用程序中使用文件</h4>
+<p>对新的 HTML5 文件 API 的支持已经被添加到 Gecko 中，从而使 web 应用程序可以访问由用户选择的本地文件。这包括使用 type file 的 input 元素的新的 multiple 属性针对多文件选择的支持。 还有 FileReader。</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
