modified html5 blog

--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -162,23 +162,24 @@ Your browser does not support the video tag.
 
 
 
+<h3>多媒体</h3>
+
+<h4>使用 HTML5 音视频</h4>
+<p>audio 和 video 元素嵌入并支持新的多媒体内容的操作。</p>
 
 
 
+<h4>WebRTC</h4>
+<p>这项技术，其中的 RTC 代表的是即时通信，允许连接到其他人，直接在浏览器中控制视频会议，而不需要一个插件或是外部的应用程序</p>
+
+
+<h4>使用 Camera API</h4>
+<p>允许使用，操作计算机摄像头，并从中存储图像。Allows to use, manipulate and store an image from the computer's camera.</p>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
+<h4>Track 和 WebVTT</h4>
+<p> track 元素支持字幕和章节。WebVTT 一个文本轨道格式。</p>
 
 
 
