modified html5 blog

--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -189,6 +189,37 @@ Your browser does not support the video tag.
 
 
 
+<h3>3D, 图像  效果</h3>
+
+
+
+<h4>Canvas 教程</h4>
+<p>了解有关新的 canvas 元素以及如何在火狐中绘制图像和其他对象。</p>
+
+
+
+
+
+
+<h4>HTML5 针对 canvas 元素的文本 API</h4>
+<p>HTML5 文本 API 现在由 canvas 元素支持。</p>
+
+
+
+
+
+
+<h4>WebGL</h4>
+<p>WebGL 通过引入了一套非常地符合 OpenGL ES 2.0 并且可以用在 HTML5 canvas 元素中的 API 给 web 带来了 3D 图像功能。</p>
+
+
+
+<h4>SVG</h4>
+<p>一个基于 XML 的可以直接嵌入到 HTML 中的矢量图像格式。</p>
+
+
+
+
 
 
 
