--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -262,38 +262,36 @@ Your browser does not support the video tag.
 
 
 
+<h3>样式</h3>
+<p>CSS 已经扩展到能够以一个更加复杂的方法给元素设置样式。这通常被称为 CSS3, 尽管 CSS 已经不再是很难触动的规范，并且不同的模块并不全部位于 level 3：其中一些位于 level 1 而另一些位于 level 4，覆盖了所有中间的层次。</p>
 
 
 
 
+<h4>新的背景样式特性</h4>
+<p>现在可以使用 box-shadow 给逻辑框设置一个阴影，而且还可以设置 多背景。</p>
 
 
 
 
+<h4>更精美的边框</h4>
+<p>现在不仅可以使用图像来格式化边框，使用 border-image 和它关联的普通属性，而且可以通过 border-radius 属性来支持圆角边框。</p>
 
 
 
 
+<h4>为你的样式设置动画</h4>
+<p>使用 CSS Transitions 以在不同的状态间设置动画，或者使用 CSS Animations 在页面的某些部分设置动画而不需要一个触发事件，你现在可以在页面中控制移动元素了。</p>
 
 
 
+<h4>排版方面的改进</h4>
+<p>作者拥有更高的控制已达到更佳的排版。他们不但可以控制 text-overflow 和 hyphenation， 而且也可以给它设置一个 阴影 或者更精细地控制它的 decorations。感谢新的 @font-face 规则，现在我们可以下载并应用自定义的字体了。</p>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<h4>新的展示性布局</h4>
+<p>为了提高设计的灵活性，已经有两种新的布局被添加了进来：CSS 多栏布局, 以及 CSS 灵活方框布局。</p>
 
 
 
