modified html5 blog

--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -305,191 +305,75 @@ Your browser does not support the video tag.
 
 
 
+<h3>性能 & 集成</h3>
 
 
 
+<h4>Web Workers</h4>
+<p>能够把 JavaScript 计算委托给后台线程，通过允许这些活动以防止使交互型事件变得缓慢。</p>
 
 
 
 
+<h4>XMLHttpRequest Level 2</h4>
+<p>允许异步读取页面的某些部分，允许其显示动态内容，根据时间和用户行为而有所不同。这是在 Ajax背后的技术。</p>
 
 
 
+<h4>即时编译的 JavaScript 引擎</h4>
+<p>新一代的 JavaScript 引擎功能更强大，性能更杰出。</p>
 
 
+<h4>History API</h4>
+<p>允许对浏览器历史记录进行操作。这对于那些交互地加载新信息的页面尤其有用。</p>
 
 
 
+<h4>conentEditable 属性：把你的网站改变成 wiki！</h4>
+<p>HTML5 已经把 contentEditable 属性标准化了。了解更多关于这个特性的内容。</p>
 
 
 
 
+<h4>拖放</h4>
+<p>HTML5 的拖放 API 能够支持在网站内部和网站之间拖放项目。同时也提供了一个更简单的供扩展和基于 Mozilla 的应用程序使用的 API。</p>
 
 
 
+<h4>HTML 中的焦点管理</h4>
+<p>支持新的 HTML5 activeElement 和 hasFocus 属性。</p>
 
 
 
 
+<h4>基于 Web 的协议处理程序</h4>
+<p>你现在可以使用 navigator.registerProtocolHandler() 方法把 web 应用程序注册成一个协议处理程序。</p>
 
 
 
 
+<h4>requestAnimationFrame</h4>
+<p>允许控制动画渲染以获得更优性能。</p>
 
 
 
 
+<h4>全屏 API</h4>
+<p>为一个网页或者应用程序控制使用整个屏幕，而不显示浏览器界面。</p>
 
 
 
 
 
+<h4>指针锁定 API</h4>
+<p>允许锁定到内容的指针，这样游戏或者类似的应用程序在指针到达窗口限制时也不会失去焦点。</p>
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<h4>在线和离线事件</h4>
+<p>为了构建一个良好的具有离线功能的 web 应用程序，你需要知道什么时候你的应用程序确实离线了。顺便提一句，在你的应用程序又再回到在线状态时你也需要知道。</p>
 
 
 
