--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -20,15 +20,26 @@ title : Web前端的一些面试考察的知识点
 <h4>1.  什么是语义化的HTML?有何意义？为什么要做到语义化？（高频率考题）</h4>
 <p>HTML的语义化可以理解为HTML的机构化，根据内容的结构化（内容语义化），选择合适的标签（代码语义化）便于开发者阅读和写出更优雅的代码的同时让浏览器的爬虫和机器很好地解析。</p>
 <p>语义化的目的是
-    <li>结构清晰——为了在没有CSS的情况下，页面也能呈现出很好地内容结构、代码结构</li>
-    <li>体验良好——例如title、alt用于解释名词或解释图片信息、label标签的活用</li>
-    <li>SEO友好——和搜索引擎建立良好沟通，有助于爬虫抓取更多的有效信息：爬虫依赖于标签来确定上下文和各个关键字的权重</li>
-    <li>方便解析——方便其他设备解析（如屏幕阅读器、盲人阅读器、移动设备）以意义的方式来渲染网页</li>
-    <li>可维护性——便于团队开发和维护，语义化更具可读性，是下一步吧网页的重要动向，遵循W3C标准的团队都遵循这个标准，可以减少差异化</li>
+    <ul>
+        <li>结构清晰——为了在没有CSS的情况下，页面也能呈现出很好地内容结构、代码结构</li>
+        <li>体验良好——例如title、alt用于解释名词或解释图片信息、label标签的活用</li>
+        <li>SEO友好——和搜索引擎建立良好沟通，有助于爬虫抓取更多的有效信息：爬虫依赖于标签来确定上下文和各个关键字的权重</li>
+        <li>方便解析——方便其他设备解析（如屏幕阅读器、盲人阅读器、移动设备）以意义的方式来渲染网页</li>
+        <li>可维护性——便于团队开发和维护，语义化更具可读性，是下一步吧网页的重要动向，遵循W3C标准的团队都遵循这个标准，可以减少差异化</li>
+    </ul>
 </p>
 
-<h4>2.  行内元素和块元素分别有哪些？（高频率）</h4>
 
+<h4>2.  行内元素和块元素分别有哪些？（高频率）</h4>
+<p>块级元素和行内元素的区别是，块级元素会占一行显示，而行内元素可以在一行并排显示。通过样式控制，它们可以相互转换。</p>
+<p>行内元素有以下特征：
+    <ul>
+        <li>设置宽度width 无效。</li>
+        <li>设置高度height 无效，可以通过line-height来设置。</li>
+        <li>设置margin 只有左右margin有效，上下无效。</li>
+        <li>设置padding 只有左右padding有效，上下则无效。</li>
+    </ul>
+</p>
 
 
 <h4>3.  严格模式与混杂模式的区分？如何触发这两种模式？（高频率）</h4>
