modified interview answer on thsi blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -17,6 +17,8 @@ title : Web前端的一些面试考察的知识点
 
 
 
+
+
 <h4>1.  什么是语义化的HTML?有何意义？为什么要做到语义化？（高频率考题）</h4>
 <p>HTML的语义化可以理解为HTML的机构化，根据内容的结构化（内容语义化），选择合适的标签（代码语义化）便于开发者阅读和写出更优雅的代码的同时让浏览器的爬虫和机器很好地解析。</p>
 <p>语义化的目的是
@@ -30,6 +32,7 @@ title : Web前端的一些面试考察的知识点
 </p>
 
 
+
 <h4>2.  行内元素和块元素分别有哪些？（高频率）</h4>
 <p>块级元素和行内元素的区别是，块级元素会占一行显示，而行内元素可以在一行并排显示。通过样式控制，它们可以相互转换。</p>
 <p>行内元素有以下特征：
@@ -40,9 +43,23 @@ title : Web前端的一些面试考察的知识点
         <li>设置padding 只有左右padding有效，上下则无效。</li>
     </ul>
 </p>
+<p>这里说的无效， 是指，它对其它元素的排列没有影响。也就是说，对于设置的margin,padding行内元素文档流里的上下元素来说，他们的间距不会因为上下margin或者上下padding而产生间距。但是就他本身而言，对于上下margin与padding是有效的。</p>
+
 
 
 <h4>3.  严格模式与混杂模式的区分？如何触发这两种模式？（高频率）</h4>
+<p>各个浏览器的混杂模式，基本就是各个浏览器的私有模式，不相互兼容。所以，除非是为了兼容的问题，比如你不想修改很久很久以前做的IE ONLY的网页，否则刻意触发混杂模式没有任何意义。</p>
+<p>可以通过以下javascript代码可以检测当前页面是哪一种渲染模式？</p>
+<p>
+    {% highlight javascript %}
+    alert(window.top.document.compatMode) ;
+//BackCompat  表示怪异模式
+//CSS1Compat  表示标准模式
+    {% endhighlight %}
+</p>
+<p>区分是标准模式还是混合模式，有其重要的意义所在，那就是确定页面解析时，使用的是“标准盒Box模型“，还是使用“传统Box模型“。
+</p>
+
 
 
 <h4>4.  Doctype 是什么？有啥作用</h4>
