add an answer on interview blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -62,7 +62,9 @@ title : Web前端的一些面试考察的知识点
 
 
 
-<h4>4.  Doctype 是什么？有啥作用</h4>
+<h4>4.  Doctype 是什么？有啥作用？</h4>
+<p>DOCTYPE标签是一种标准通用标记语言的文档类型声明，它的目的是要告诉标准通用标记语言解析器，它应该使用什么样的文档类型定义（DTD）来解析文档。</p>
+<p>在超文本标记语言（标准通用标记语言的一个应用）里头，就是用来说明编写网页的HTML/XHTML的标签用的是什么版本。</p>
  
 
 <h4>5.  HTML与XHTML的区别</h4>
