--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -67,6 +67,7 @@ title : Web前端的一些面试考察的知识点
 <p>在超文本标记语言（标准通用标记语言的一个应用）里头，就是用来说明编写网页的HTML/XHTML的标签用的是什么版本。</p>
  
 
+
 <h4>5.  HTML与XHTML的区别</h4>
 <p>XHTML是HTML像XML的一个过渡语言，它比HTML严谨性会高点，然后基本语言都还是沿用的HTML的标签，只不过废除了部分表现层的标签，同事在标准上要求高了点比如标签的严格嵌套，标签结束等等简单的说写 XHTML 要用干净的 HTML 语法。</p>
 <p>XHTML的一些语法要求：
@@ -86,17 +87,42 @@ title : Web前端的一些面试考察的知识点
 </p>
 
 
+
 <h4>6.  HTML5以什么标签开头？</h4>
+<p>
+    {% highlight html %}
+    <!DOCTYPE html>
+    {% endhighlight %}
+</p>
+<p>HTML5文档以开头，这是一个文档类型声明，并且必须位于HTML5文档的第一行，它可以用来告诉浏览器或任何其它分析程序它们所查看的文件类型。html标签是HTML5文档的根标签，紧跟在!DOCTYPE html下面。html标签支持HTML5全局属性和manifest属性。manifest属性主要在创建HTML5离线应用的时候使用。</p>
+<p>
+    {% highlight html %}
+    <!DOCTYPE html>
+<html>
+<head>
+<meta charset=\"utf-8\" />
+<title>Hello HTML5</title>
+</head>
+<body>
+<p>这是一个段落。</p>
+</body>
+</html>
+    {% endhighlight %}
+</p>
+
 
 
 <h4>7.  Div与span的区别</h4>
 
 
+
 <h4>8.  Img的alt和title有啥区别？各自作用？</h4>
+
 
 
 <h4>9.  HTML5的离线储存</h4>
 <p>LocalStorage——为HTML5的离线储存的API。</p>
+
 
 
 <h4>10. iframe有那些缺点？</h4>
