add an answer on this question at interview blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -121,11 +121,31 @@ title : Web前端的一些面试考察的知识点
 
 
 <h4>9.  HTML5的离线储存</h4>
-<p>LocalStorage——为HTML5的离线储存的API。</p>
+<p>内置到HTML5中的Web存储对象有两种类型：
+    <ul>
+        <li>sessionStorage 对象负责存储一个会话的数据。如果用户关闭了页面或浏览器，则会销毁数据。</li>
+        <li>The localStorage 对象负责存储没有到期的数据。当Web页面或浏览器关闭时，仍会保持数据的存储，当然这还取决于为此用户的浏览器设置的存储量。</li>
+    </ul>
+</p>
+<p><strong>注：</strong>不能在浏览器之间分享Web存储, 如果您在Safari中存储了数据，那么该数据在Mozilla Firefox中是无法访问的。</p>
 
 
 
 <h4>10. iframe有那些缺点？</h4>
+<p>
+<ul>优点
+    <li>重载页面时不需要重载整个页面，只重载页面中的一个框架页(减少了数据的传输，增加了网页下载速度)</li>
+    <li>方便制作导航栏</li>
+</ul>
+    <ul>缺点
+        <li>多框架的页面会增加服务器的http请求</li>
+        <li>代码复杂,无法被一些搜索引擎索引到</li>
+        <li>多数小型的移动设备（PDA 手机）无法完全显示框架</li>
+        <li>会产生很多页面，不容易管理</li>
+        <li>不容易打印</li>
+        <li>浏览器的后退按钮无效</li>
+    </ul>
+</p>
 
 
 
