add an answer on interview blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -113,10 +113,26 @@ title : Web前端的一些面试考察的知识点
 
 
 <h4>7.  Div与span的区别</h4>
+<p>两者最明显的区别在于DIV是块元素，而SPAN是行内元素(也译作内嵌元素)。SPAN 的前后是不会换行的，它没有结构的意义，纯粹是应用样式。总的来说，一个div是占一个块的，它的默认display属性是block，表示一个块。而span，它的display默认属性是inline，可以连在一起的。 </p>
 
 
 
 <h4>8.  Img的alt和title有啥区别？各自作用？</h4>
+<p>使用alt属性是为了给那些不能看到你文档中图像的浏览者提供文字说明。这包括那些使用本来就不支持图像显示或者图像显示被关闭的浏览器的用户，视觉障碍的用户和使用屏幕阅读器的用户。替换文字是用来替代图像而不是提供额外说明文字的。
+    <ul>
+        <li>为不能显示图像、窗体或applets的用户代理（UA），alt属性用来指定替换文字。替换文字的语言由lang属性指定。</li>
+        <li>它只能用在img、area和input元素中</li>
+        <li>长度必须少于100个英文字符或者用户必须保证替换文字尽可能的短。</li>
+    </ul>
+</p>
+<p>使用title属性提供非本质的额外信息。title属性有一个很好的用途，即为链接添加描述性文字，特别是当连接本身并不是十分清楚的表达了链接的目的。
+    <ul>
+        <li>为设置该属性的元素提供建议性的信息。</li>
+        <li>可以用在除了base，basefont，head，html，meta，param，script和title之外的所有标签。</li>
+        <li>值可以比alt属性值设置的更长。不过要注意的是，有些浏览器会截断过长的文字。比如Mozilla核心的浏览器只能显示最先的60个字符。</li>
+    </ul>
+</p>
+<p>综上所述,我们可以知道,我们可以给option用title加注释,但是不能用alt加注释。在许多时候,alt的局限性很大.而title的扩展性很强.我们在互联网上经常会看到,当指针移上去时,有时显示的注释里不光有文字,还有图片,还可以换行,甚至更多!建议大家以后如果只是图片,或者是给按钮等常用的加些文字替换的话,用alt属性就够了.而是要完成更酷的特效或者是加载图片,给更多的标签加注释时,应选用title属性</p>
 
 
 
