add resume pages

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -118,14 +118,14 @@ title : Web前端的一些面试考察的知识点
 
 
 <h4>8.  Img的alt和title有啥区别？各自作用？</h4>
-<p>使用alt属性是为了给那些不能看到你文档中图像的浏览者提供文字说明。这包括那些使用本来就不支持图像显示或者图像显示被关闭的浏览器的用户，视觉障碍的用户和使用屏幕阅读器的用户。替换文字是用来替代图像而不是提供额外说明文字的。
+<p><strong>用来指定替换文字</strong>使用alt属性是为了给那些不能看到你文档中图像的浏览者提供文字说明。这包括那些使用本来就不支持图像显示或者图像显示被关闭的浏览器的用户，视觉障碍的用户和使用屏幕阅读器的用户。替换文字是用来替代图像而不是提供额外说明文字的。
     <ul>
         <li>为不能显示图像、窗体或applets的用户代理（UA），alt属性用来指定替换文字。替换文字的语言由lang属性指定。</li>
         <li>它只能用在img、area和input元素中</li>
         <li>长度必须少于100个英文字符或者用户必须保证替换文字尽可能的短。</li>
     </ul>
 </p>
-<p>使用title属性提供非本质的额外信息。title属性有一个很好的用途，即为链接添加描述性文字，特别是当连接本身并不是十分清楚的表达了链接的目的。
+<p><strong>提供建议性的信息</strong>使用title属性提供非本质的额外信息。title属性有一个很好的用途，即为链接添加描述性文字，特别是当连接本身并不是十分清楚的表达了链接的目的。
     <ul>
         <li>为设置该属性的元素提供建议性的信息。</li>
         <li>可以用在除了base，basefont，head，html，meta，param，script和title之外的所有标签。</li>
