modified resume pages

--- a/resume.html
+++ b/resume.html
@@ -79,114 +79,114 @@
 　　 <body>
 		
 
+		<div id="main">
+		    <h2 class="myName">于彪斌</h2>
+
+		    <div class="basicInfo">
+		        <p class="title">个人概况</p>
+		        <ul>
+		            <li>工作经验: 五年</li>
+		            <li>期望待遇: 10K</li>
+		            <li>性别: 男</li>
+		            <li>出生年月: 1986年8月</li>
+		            <li>邮箱: yubiaobin1986@gmail.com</li>
+		            <li>现居住地: 广州</li>
+		            <li>电话: <span class="myPhone">18620109230</span></li>
+		        </ul>
+		    </div>
+
+		    <div class="education">
+		        <p class="title">教育经历</p>
+		        <ul>
+		            <li>2008年9月至2011年7月，北京师范大学，法律硕士(全日制)</li>
+		            <li>2004年9月至2008年7月，福建工程学院，信息管理与信息系统专业</li>
+		        </ul>
+		    </div>
+
+		    <div class="jobs">
+		        <p class="title">工作履历</p>
+		        <ul>
+		            <li>2012年9月至今，网易（北京）传媒有限公司，前端工程师</li>
+		            <li>2011年9月至2012年5月，支付宝无线事部，前端工程师</li>
+		            <li>2011年4月至2011年7月，百度移动互联网事业部，实习前端工程师</li>
+		        </ul>
+		    </div>
+
+		    <div class="tech">
+		        <p class="title">掌握技术</p>
+		        <ul>
+		            <li>熟练掌握html/css/js等前端知识，能写出语义合理，兼容性良好的网站结构</li>
+		            <li>熟练使用jQuery，Zepto等库或框架</li>
+		            <li>
+		                <p>熟悉php，mysql等技术，能独立建站。</p>
+		                <p class="itemIntro">作品有: <a href="http://starofwords.com/" target="_blank">http://starofwords.com/</a>，<a href="http://www.f2estar.com/" target="_blank">http://www.f2estar.com/</a>等</p>
+		            </li>
+		        </ul>
+		    </div>
+
+		    <div class="works">
+		        <p class="title">项目经验</p>
+		        <ul>
+		            <li>
+		                <p><a target="_blank" href="http://3g.163.com/ntes/special/00340BF8/hdlb.html">网易新闻客户端活动广场</a></p>
+		                <p class="itemIntro">简介：一个网易新闻客户端native app的内嵌wap页，使用hybrid开发形式，提供一个活动入口页面。主要使用Zepto,html5,css3等技术开发。</p>
+		            </li>
+		            <li>
+		                <p><a target="_blank" href="http://c.3g.163.com/nc/qa/tenIndex.html">新闻大作战</a></p>
+		                <p class="itemIntro">简介：网易新闻客户端的售卖项目。通过网易的互动系统录入题目，前端jsonp调取题目数据渲染，用户答题以后，互动系统则返回一个答题id自动该用户答题分数，前端再将用户信息和分数同时提交至后台，让用户获取金币。形式新颖，可玩性也很较强，最高一天有10万次的答题数量。</p>
+		            </li>
+		            <li>
+		                <p><a target="_blank" href="http://c.3g.163.com/nc/qa/costa/index.html">costa咖啡项目</a></p>
+		                <p class="itemIntro">简介：新闻客户端跟costa咖啡合作的项目，通过wap页模拟泡制咖啡以传递costa咖啡品牌形象。主要通过html5,css3等技术大进行动作模拟，活动有自己的创新性和独特价值。</p>
+		            </li>
+		            <li>
+		                <p><a target="_blank" href="http://lady.163.com/special/ugcvideo/">视频精选项目</a></p>
+		                <p>简介：一个移动wap页，可以拍摄视频，主要通过input:file的形式上传视频，活动中还使用到postMessage技术解决跨域问题。</p>
+		            </li>
+		            <li>
+		                <p><a target="_blank" href="http://tie.163.com/gt/special/xqianggame/">小强历险记</a></p>
+		                <p>简介：跟网易跟贴结合的一个pc项目，主要使用jQuery构建。</p>
+		            </li>
+		            <li>
+		                <p>pad版支付宝</p>
+		                <p>简介：主要承担html和css编写工作，参与部分开发联调。运用技术主要有：html5，css3，原生js和jQuery。</p>
+		            </li>
+		            <li>
+		                <p>支付宝无线首页改版</p>
+		                <p>简介：负责html,css的重构，部分js功能调试。运用技术主要有：html，css2，原生js。</p>
+		            </li>
+		            <li>
+		                <p>支付宝无线商户签约平台</p>
+		                <p>简介：承担全部html,css,js编写工作。运用技术主要有：html，css2，原生js，支付宝js框架arale。</p>
+		            </li>
+		        </ul>
+		    </div>
+
+		    <div class="learnFromLast">
+		        <p class="title">工作履历</p>
+		        <ul>
+		            <li>不一定所有知识都熟悉，但能通过google，stackoverflow，英文原版书籍等渠道进行知识更新，快速独立解决问题。</li>
+		            <li>以前只注重问题的解决，现在更加重视更好的解决问题，努力寻找最优解决方案。</li>
+		            <li>注重代码简洁性，可重用性，提升开发效率。</li>
+		            <li>做事方式方面，能很好的跟产品／设计／后台等同事进行合作沟通，创造一种大家都舒服的工作形式。</li>
+		        </ul>
+		    </div>
+
+		    <div class="myWish">
+		        <p class="title">对下一份工作的期待</p>
+		        <ul>
+		            <li>提升大型项目的驾驭能力，研究性能调优，学习模块化设计等方面的知识。</li>
+		            <li>以前只注重问题的解决，现在更加重视更好的解决问题，努力寻找最优解决方案。</li>
+		            <li>更好的把握用户需求，让技术真正服务于产品。</li>
+		            <li>希望新工作有一定成长空间，技术上有足够挑战性，服务的产品有独特价值。</li>
+		            <li>最后，希望我们有机会成为同事。</li>
+		        </ul>
+		    </div>
+		</div>
 
 
-<div id="main">
-    <h2 class="myName">于彪斌</h2>
 
-    <div class="basicInfo">
-        <p class="title">个人概况</p>
-        <ul>
-            <li>性别: 男</li>
-            <li>邮箱: yubiaobin1986@gmail.com</li>
-            <li>出生年月: 1986年8月</li>
-            <li>现住地: 广州</li>
-            <li>电话: <span class="myPhone">18620109230</span></li>
-        </ul>
-    </div>
-
-    <div class="education">
-        <p class="title">教育经历</p>
-        <ul>
-            <li>2008年9月至2011年7月，北京师范大学，法律硕士(全日制)</li>
-            <li>2004年9月至2008年7月，福建工程学院，信息管理与信息系统专业</li>
-        </ul>
-    </div>
-
-    <div class="jobs">
-        <p class="title">工作履历</p>
-        <ul>
-            <li>2012年9月至今，网易（北京）传媒有限公司，前端工程师</li>
-            <li>2011年9月至2012年5月，支付宝无线事部，前端工程师</li>
-            <li>2011年4月至2011年7月，百度移动互联网事业部，实习前端工程师</li>
-        </ul>
-    </div>
-
-    <div class="tech">
-        <p class="title">掌握技术</p>
-        <ul>
-            <li>熟练掌握html/css/js等前端知识，能写出语义合理，兼容性良好的网站结构</li>
-            <li>熟练使用jQuery，Zepto等库或框架</li>
-            <li>
-                <p>熟悉php，mysql等技术，能独立建站。</p>
-                <p class="itemIntro">作品有: <a href="http://starofwords.com/" target="_blank">http://starofwords.com/</a>，<a href="http://www.f2estar.com/" target="_blank">http://www.f2estar.com/</a>等</p>
-            </li>
-        </ul>
-    </div>
-
-    <div class="works">
-        <p class="title">项目经验</p>
-        <ul>
-            <li>
-                <p><a target="_blank" href="http://3g.163.com/ntes/special/00340BF8/hdlb.html">网易新闻客户端活动广场</a></p>
-                <p class="itemIntro">简介：一个网易新闻客户端native app的内嵌wap页，使用hybrid开发形式，提供一个活动入口页面。主要使用Zepto,html5,css3等技术开发。</p>
-            </li>
-            <li>
-                <p><a target="_blank" href="http://c.3g.163.com/nc/qa/tenIndex.html">新闻大作战</a></p>
-                <p class="itemIntro">简介：网易新闻客户端的售卖项目。通过网易的互动系统录入题目，前端jsonp调取题目数据渲染，用户答题以后，互动系统则返回一个答题id自动该用户答题分数，前端再将用户信息和分数同时提交至后台，让用户获取金币。形式新颖，可玩性也很较强，最高一天有10万次的答题数量。</p>
-            </li>
-            <li>
-                <p><a target="_blank" href="http://c.3g.163.com/nc/qa/costa/index.html">costa咖啡项目</a></p>
-                <p class="itemIntro">简介：新闻客户端跟costa咖啡合作的项目，通过wap页模拟泡制咖啡以传递costa咖啡品牌形象。主要通过html5,css3等技术大进行动作模拟，活动有自己的创新性和独特价值。</p>
-            </li>
-            <li>
-                <p><a target="_blank" href="http://lady.163.com/special/ugcvideo/">视频精选项目</a></p>
-                <p>简介：一个移动wap页，可以拍摄视频，主要通过input:file的形式上传视频，活动中还使用到postMessage技术解决跨域问题。</p>
-            </li>
-            <li>
-                <p><a target="_blank" href="http://tie.163.com/gt/special/xqianggame/">小强历险记</a></p>
-                <p>简介：跟网易跟贴结合的一个pc项目，主要使用jQuery构建。</p>
-            </li>
-            <li>
-                <p>pad版支付宝</p>
-                <p>简介：主要承担html和css编写工作，参与部分开发联调。运用技术主要有：html5，css3，原生js和jQuery。</p>
-            </li>
-            <li>
-                <p>支付宝无线首页改版</p>
-                <p>简介：负责html,css的重构，部分js功能调试。运用技术主要有：html，css2，原生js。</p>
-            </li>
-            <li>
-                <p>支付宝无线商户签约平台</p>
-                <p>简介：承担全部html,css,js编写工作。运用技术主要有：html，css2，原生js，支付宝js框架arale。</p>
-            </li>
-        </ul>
-    </div>
-
-    <div class="learnFromLast">
-        <p class="title">工作履历</p>
-        <ul>
-            <li>不一定所有知识都熟悉，但能通过google，stackoverflow，英文原版书籍等渠道进行知识更新，快速独立解决问题。</li>
-            <li>以前只注重问题的解决，现在更加重视更好的解决问题，努力寻找最优解决方案。</li>
-            <li>注重代码简洁性，可重用性，提升开发效率。</li>
-            <li>做事方式方面，能很好的跟产品／设计／后台等同事进行合作沟通，创造一种大家都舒服的工作形式。</li>
-        </ul>
-    </div>
-
-    <div class="myWish">
-        <p class="title">对下一份工作的期待</p>
-        <ul>
-            <li>提升大型项目的驾驭能力，研究性能调优，学习模块化设计等方面的知识。</li>
-            <li>以前只注重问题的解决，现在更加重视更好的解决问题，努力寻找最优解决方案。</li>
-            <li>更好的把握用户需求，让技术真正服务于产品。</li>
-            <li>希望新工作有一定成长空间，技术上有足够挑战性，服务的产品有独特价值。</li>
-            <li>最后，希望我们有机会成为同事。</li>
-        </ul>
-    </div>
-</div>
-
-
-
-</body>
+	</body>
 </html>
 
 
