--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="于彪斌,Maxyu,yubiaobin,github,前端博客,github博客,blog,技术博客,Github pages,jekyll博客">
 		<meta name="description" content="于彪斌的技术博客,maxyu的前端技术博客,分享自己的技术心得,积累前段技能,汇聚前端之路的点点滴滴。">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>{{ page.title }}</title>
+		<title>WEB前端开发工程师——于彪斌的简历</title>
 		<link rel="icon" href="/img/favicon.ico" type="image/x-icon"/>
 		<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon"/>
 		<link href="/css/layout.css" rel="stylesheet" media="screen">
@@ -27,11 +27,15 @@
 	        body{
 	            ackground-color: #f0f0f0;
 	            font-family: 'Microsoft Yahei', '\5FAE\8F6F\96C5\9ED1', Arial, 'Hiragino Sans GB', '\5B8B\4F53';
-	            font-size: 20px;
+	            font-size: 18px;
 	            color: #2f2f2f;
+	            text-shadow:none;
 	        }
 	        ul,li{
 	            list-style-type: none;
+	        }
+	        strong{
+	        	font-size: 24px;
 	        }
 	        #main{
 	            width: 960px;
@@ -39,7 +43,6 @@
 	            padding-bottom:60px;
 	        }
 	        #main li{
-	            background: url("arrowright.png") 5px 23px no-repeat;
 	            padding: 14px 0 14px 15px;
 	        }
 	        .myName{
@@ -48,7 +51,7 @@
 	            text-align: center;
 	            font-weight: bold;
 	        }
-	        .basicInfo .title,.education .title,.jobs .title,.tech .title,.works .title,.myWish .title,.learnFromLast .title{
+	        .basicInfo .title,.education .title,.jobs .title,.tech .title,.works .title,.myWish .title,.learnFromLast .title,.blog .title{
 	            padding: 15px 0 15px 8px;
 	            /*background-color: #99ccff;*/
 	            background:#ccc;
@@ -98,23 +101,28 @@
 		    <div class="education">
 		        <p class="title">教育经历</p>
 		        <ul>
-		            <li>2008年9月至2011年7月，北京师范大学，法律硕士(全日制)</li>
-		            <li>2004年9月至2008年7月，福建工程学院，信息管理与信息系统专业</li>
+					<li>2005.9——2009.6 , 咸宁学院（全日制普通本科） , 工商管理专业</li>
+		            <li>2012.8——2012.11 ,中山大学数计学院（IT培训中心）, 网页设计专业</li>
 		        </ul>
 		    </div>
+
 
 		    <div class="jobs">
 		        <p class="title">工作履历</p>
 		        <ul>
-		            <li>2012年9月至今，网易（北京）传媒有限公司，前端工程师</li>
-		            <li>2011年9月至2012年5月，支付宝无线事部，前端工程师</li>
-		            <li>2011年4月至2011年7月，百度移动互联网事业部，实习前端工程师</li>
+		        	<li>2014.05——至今,    广州世奥信息技术有限公司,  WEB前端工程师</li>
+		        	<li>2013.03——2014.04, 香港域思集团广州研发中心,  WEB前端工程师</li>
+		        	<li>2012.11——2013.02, 广州市白云区天誉化妆品牧妆人电子商务部, 前端开发</li>
+		        	<li>2011.01——2012.08, 广州市聚芳企业管理有限公司, 设计采购专员</li>
+					<li>2009.06——2010.12, 广州市圣菲之美化妆品集团公司, 设计助理</li>
 		        </ul>
 		    </div>
 
 		    <div class="tech">
 		        <p class="title">掌握技术</p>
+		        <h2>做重构，设计出身，像素级还原</h2>
 		        <ul>
+		        	<li>熟练使用PhotoShop切图，像素级重构。</li>
 		            <li>熟练掌握html/css/js等前端知识，能写出语义合理，兼容性良好的网站结构</li>
 		            <li>熟练使用jQuery，Zepto等库或框架</li>
 		            <li>
@@ -122,6 +130,25 @@
 		                <p class="itemIntro">作品有: <a href="http://starofwords.com/" target="_blank">http://starofwords.com/</a>，<a href="http://www.f2estar.com/" target="_blank">http://www.f2estar.com/</a>等</p>
 		            </li>
 		        </ul>
+		        <h2>写代码，逻辑清晰，代码精简</h2>
+		        	<ul>
+		        		<li>熟练掌握<strong>HTML</strong>以及ECMA5的规范以及HTML5新标签及CSS3样式及动画。</li>
+		        		<li>熟练掌握CSS盒模型布局技术，编写代码命名规范、工整、符合WEB语义化。</li>
+		        		<li>熟练掌握CSS盒模型布局技术，编写代码命名规范、工整、符合WEB语义化。</li>
+		        		<li>熟悉前端MVC框架例如Backbone以及AngularJS，并且运用Backbone实际构建过手机应用项目。</li>
+		        		<li>●	了解WEB开发中HTTP协议，以及熟悉运用Ajax通过JSON数据接口与后台进行数据交互，与后端工程师共同无障碍。</li>
+		        		<li>●	熟练使用GIT版本控制系统管理代码版本进行高效的修改，提交和发布代码。</li>
+		        		<li>●	熟练使用SublimeText2等类Emacs高效文本编辑器手写代码，高效快捷操作提升效率。</li>
+		        		<li>●	熟练使用Mac、Linux等常规终端命令。</li>
+		        		<li>●	了解网站后台脚本语言PHP，以及熟悉MySQL数据库等增删查改SQL语句操作。</li>
+		        		<li>●	了解脚本语言Python，以及了解Flask框架和Django框架。</li>
+		        		<li>●	熟练使用Trello以及Tower等团队协作项目管理平台。</li>
+		        		<li>●	善于使用Github以及Stackoverflow搜素技术方面疑难杂症并快速解决。</li>
+		        		<li>●	了解常用的Jinja2模板引擎以及Jekyll模板引擎。</li>
+		        		<li></li>
+		        		<li></li>
+
+		        	</ul>
 		    </div>
 
 		    <div class="works">
@@ -182,6 +209,17 @@
 		            <li>最后，希望我们有机会成为同事。</li>
 		        </ul>
 		    </div>
+
+		    <div class="blog">
+		    	<p class="title">博客、简历地址</p>
+		    	<ul>
+		    		<li><a href="http://www.oc35.com" target="_blank">个人博客： http://www.oc35.com/</a></li>
+		    		<li><a href="https://github.com/yubiaobin" target="_blank">Github地址： https://github.com/yubiaobin</a></li>
+		    		<li><a href="http://www.oc35.com/docs/max.doc" target="_blank">个人简历下载： http://www.oc35.com/docs/max.doc</a></li>
+		    	</ul>
+		    </div>
+
+
 		</div>
 
 
