--- a/resume.html
+++ b/resume.html
@@ -136,15 +136,15 @@
 		        		<li>熟练掌握CSS盒模型布局技术，编写代码命名规范、工整、符合WEB语义化。</li>
 		        		<li>熟练掌握CSS盒模型布局技术，编写代码命名规范、工整、符合WEB语义化。</li>
 		        		<li>熟悉前端MVC框架例如Backbone以及AngularJS，并且运用Backbone实际构建过手机应用项目。</li>
-		        		<li>●	了解WEB开发中HTTP协议，以及熟悉运用Ajax通过JSON数据接口与后台进行数据交互，与后端工程师共同无障碍。</li>
-		        		<li>●	熟练使用GIT版本控制系统管理代码版本进行高效的修改，提交和发布代码。</li>
-		        		<li>●	熟练使用SublimeText2等类Emacs高效文本编辑器手写代码，高效快捷操作提升效率。</li>
-		        		<li>●	熟练使用Mac、Linux等常规终端命令。</li>
-		        		<li>●	了解网站后台脚本语言PHP，以及熟悉MySQL数据库等增删查改SQL语句操作。</li>
-		        		<li>●	了解脚本语言Python，以及了解Flask框架和Django框架。</li>
-		        		<li>●	熟练使用Trello以及Tower等团队协作项目管理平台。</li>
-		        		<li>●	善于使用Github以及Stackoverflow搜素技术方面疑难杂症并快速解决。</li>
-		        		<li>●	了解常用的Jinja2模板引擎以及Jekyll模板引擎。</li>
+		        		<li>了解WEB开发中HTTP协议，以及熟悉运用Ajax通过JSON数据接口与后台进行数据交互，与后端工程师共同无障碍。</li>
+		        		<li>熟练使用GIT版本控制系统管理代码版本进行高效的修改，提交和发布代码。</li>
+		        		<li>熟练使用SublimeText2等类Emacs高效文本编辑器手写代码，高效快捷操作提升效率。</li>
+		        		<li>熟练使用Mac、Linux等常规终端命令。</li>
+		        		<li>了解网站后台脚本语言PHP，以及熟悉MySQL数据库等增删查改SQL语句操作。</li>
+		        		<li>了解脚本语言Python，以及了解Flask框架和Django框架。</li>
+		        		<li>熟练使用Trello以及Tower等团队协作项目管理平台。</li>
+		        		<li>善于使用Github以及Stackoverflow搜素技术方面疑难杂症并快速解决。</li>
+		        		<li>了解常用的Jinja2模板引擎以及Jekyll模板引擎。</li>
 		        		<li></li>
 		        		<li></li>
 
@@ -190,12 +190,18 @@
 		    </div>
 
 		    <div class="learnFromLast">
-		        <p class="title">工作履历</p>
+		        <p class="title">技术探索</p>
 		        <ul>
 		            <li>不一定所有知识都熟悉，但能通过google，stackoverflow，英文原版书籍等渠道进行知识更新，快速独立解决问题。</li>
 		            <li>以前只注重问题的解决，现在更加重视更好的解决问题，努力寻找最优解决方案。</li>
 		            <li>注重代码简洁性，可重用性，提升开发效率。</li>
 		            <li>做事方式方面，能很好的跟产品／设计／后台等同事进行合作沟通，创造一种大家都舒服的工作形式。</li>
+
+		            <li>研究过Jquery的源码</li>
+		            <li>运用CSS框架——Bootstrap做过项目</li>
+		            <li>运用前端MVC框架——Backbone做过项目</li>
+		            <li>了解Angular.js 、requirejs、KISSY 等前端框架工具</li>
+		            <li>运用GIthub Pages 和Jekyll 搭建个人博客</li>
 		        </ul>
 		    </div>
 
@@ -207,6 +213,11 @@
 		            <li>更好的把握用户需求，让技术真正服务于产品。</li>
 		            <li>希望新工作有一定成长空间，技术上有足够挑战性，服务的产品有独特价值。</li>
 		            <li>最后，希望我们有机会成为同事。</li>
+		            <li>研究过Jquery的源码</li>
+		            <li>运用CSS框架——Bootstrap做过项目</li>
+		            <li>运用前端MVC框架——Backbone做过项目</li>
+		            <li>了解Angular.js 、requirejs、KISSY 等前端框架工具</li>
+		            <li>运用GIthub Pages 和Jekyll 搭建个人博客</li>
 		        </ul>
 		    </div>
 
