modified resume pages

--- a/resume.html
+++ b/resume.html
@@ -9,9 +9,6 @@
 		<title>WEB前端开发工程师——于彪斌的简历</title>
 		<link rel="icon" href="/img/favicon.ico" type="image/x-icon"/>
 		<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon"/>
-		<link href="/css/layout.css" rel="stylesheet" media="screen">
-		<link href="/css/pygment_trac.css" rel="stylesheet" media="screen">
-
 		<style type="text/css">
 	        *{
 	            padding: 0;
@@ -31,8 +28,19 @@
 	            color: #2f2f2f;
 	            text-shadow:none;
 	        }
+	        h2{
+	        	font-size: 22px;
+				font-weight: bold;
+				color: #303030;
+				margin:20px 0;
+	        }
+	        p{
+	        	text-indent: 24px;
+	        	margin:10px 0;
+	        }
 	        ul,li{
 	            list-style-type: none;
+	            list-style: disc inside;
 	        }
 	        strong{
 	        	font-size: 24px;
@@ -43,15 +51,22 @@
 	            padding-bottom:60px;
 	        }
 	        #main li{
-	            padding: 14px 0 14px 15px;
+	            padding: 10px 0 10px 15px;
 	        }
-	        .myName{
+	        .author{
 	            padding: 40px 0;
 	            font-size: 60px;
 	            text-align: center;
 	            font-weight: bold;
 	        }
-	        .basicInfo .title,.education .title,.jobs .title,.tech .title,.works .title,.myWish .title,.learnFromLast .title,.blog .title{
+	        .basicInfo .title,
+	        .education .title,
+	        .jobs .title,
+	        .tech .title,
+	        .works .title,
+	        .myWish .title,
+	        .learnMore .title,
+	        .blog .title{
 	            padding: 15px 0 15px 8px;
 	            /*background-color: #99ccff;*/
 	            background:#ccc;
@@ -61,15 +76,14 @@
 	        #main .basicInfo li{
 	            width: 50%;
 	            float: left;
-	            background: none;
-	            padding: 14px 0 14px 0px;
+	            padding:10px 0;
 	        }
 	        #main .itemIntro{
 	            font-size: 18px;
 	            margin-top: 8px;
 	        }
 	        .basicInfo ul{
-	            width: 98%;
+	            width: 96%;
 	            margin: 0 auto;
 	            overflow: hidden;
 	        }
@@ -83,7 +97,7 @@
 		
 
 		<div id="main">
-		    <h2 class="myName">于彪斌</h2>
+		    <h2 class="author">于彪斌</h2>
 
 		    <div class="basicInfo">
 		        <p class="title">个人概况</p>
@@ -145,9 +159,6 @@
 		        		<li>熟练使用Trello以及Tower等团队协作项目管理平台。</li>
 		        		<li>善于使用Github以及Stackoverflow搜素技术方面疑难杂症并快速解决。</li>
 		        		<li>了解常用的Jinja2模板引擎以及Jekyll模板引擎。</li>
-		        		<li></li>
-		        		<li></li>
-
 		        	</ul>
 		    </div>
 
@@ -189,7 +200,7 @@
 		        </ul>
 		    </div>
 
-		    <div class="learnFromLast">
+		    <div class="learnMore">
 		        <p class="title">技术探索</p>
 		        <ul>
 		            <li>不一定所有知识都熟悉，但能通过google，stackoverflow，英文原版书籍等渠道进行知识更新，快速独立解决问题。</li>
@@ -213,11 +224,6 @@
 		            <li>更好的把握用户需求，让技术真正服务于产品。</li>
 		            <li>希望新工作有一定成长空间，技术上有足够挑战性，服务的产品有独特价值。</li>
 		            <li>最后，希望我们有机会成为同事。</li>
-		            <li>研究过Jquery的源码</li>
-		            <li>运用CSS框架——Bootstrap做过项目</li>
-		            <li>运用前端MVC框架——Backbone做过项目</li>
-		            <li>了解Angular.js 、requirejs、KISSY 等前端框架工具</li>
-		            <li>运用GIthub Pages 和Jekyll 搭建个人博客</li>
 		        </ul>
 		    </div>
 
