--- a/resume.html
+++ b/resume.html
@@ -148,7 +148,6 @@
 		        	<ul>
 		        		<li>熟练掌握<strong>HTML</strong>以及ECMA5的规范以及HTML5新标签及CSS3样式及动画。</li>
 		        		<li>熟练掌握CSS盒模型布局技术，编写代码命名规范、工整、符合WEB语义化。</li>
-		        		<li>熟练掌握CSS盒模型布局技术，编写代码命名规范、工整、符合WEB语义化。</li>
 		        		<li>熟悉前端MVC框架例如Backbone以及AngularJS，并且运用Backbone实际构建过手机应用项目。</li>
 		        		<li>了解WEB开发中HTTP协议，以及熟悉运用Ajax通过JSON数据接口与后台进行数据交互，与后端工程师共同无障碍。</li>
 		        		<li>熟练使用GIT版本控制系统管理代码版本进行高效的修改，提交和发布代码。</li>
@@ -157,7 +156,7 @@
 		        		<li>了解网站后台脚本语言PHP，以及熟悉MySQL数据库等增删查改SQL语句操作。</li>
 		        		<li>了解脚本语言Python，以及了解Flask框架和Django框架。</li>
 		        		<li>熟练使用Trello以及Tower等团队协作项目管理平台。</li>
-		        		<li>善于使用Github以及Stackoverflow搜素技术方面疑难杂症并快速解决。</li>
+		        		<li>善于使用Github以及Stackoverflow搜索技术方面疑难杂症并快速解决。</li>
 		        		<li>了解常用的Jinja2模板引擎以及Jekyll模板引擎。</li>
 		        	</ul>
 		    </div>
