change global hover on resume pages

--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 	            text-decoration: none;
 	        }
 	        a:hover{
-	            color: #e58c7c;
+	            color:#4ac383;
 	        }
 	        body{
 	            ackground-color: #f0f0f0;
