modified resume pages

--- a/resume.html
+++ b/resume.html
@@ -139,10 +139,10 @@
 		        	<li>熟练使用PhotoShop切图，像素级重构。</li>
 		            <li>熟练掌握html/css/js等前端知识，能写出语义合理，兼容性良好的网站结构</li>
 		            <li>熟练使用jQuery，Zepto等库或框架</li>
-		            <li>
+		           <!--  <li>
 		                <p>熟悉php，mysql等技术，能独立建站。</p>
 		                <p class="itemIntro">作品有: <a href="http://starofwords.com/" target="_blank">http://starofwords.com/</a>，<a href="http://www.f2estar.com/" target="_blank">http://www.f2estar.com/</a>等</p>
-		            </li>
+		            </li> -->
 		        </ul>
 		        <h2>写代码，逻辑清晰，代码精简</h2>
 		        	<ul>
@@ -164,7 +164,17 @@
 		    <div class="works">
 		        <p class="title">项目经验</p>
 		        <ul>
-		            <li>
+		        	<li>
+		        		<p><a target="_blank" href="http://www.52retail.com">www.52retail.com</a></p>
+		        		<p class="itemIntro">一个SNS网站兼具E-SHOP功能，五天内完成所有前端基础性页面并且编写登录表单，忘记密码等等表单的验证以及E-SHOP相关的交互效果所需的Javascript脚本，项目时间紧急，但是最终保质保量的完成了项目。</p>
+		        	</li>
+		        	<li>
+		        		<p>Android手机应用开发</p>
+		        		<p class="itemIntro">
+		        			一个类似游戏盒子的手机应用，初期技术选型阶段选用Phonegap+Jquerymobile+Backbone 完成所有前端基础性页面并且和后端进行数据交互，做完发现前端列表数据很多时候滑动效果特别卡顿，后来就用Phonegap+Ratchet+Backbone重构所有前端页面，最终完成该项目。
+		        		</p>
+		        	</li>
+		            <!-- <li>
 		                <p><a target="_blank" href="http://3g.163.com/ntes/special/00340BF8/hdlb.html">网易新闻客户端活动广场</a></p>
 		                <p class="itemIntro">简介：一个网易新闻客户端native app的内嵌wap页，使用hybrid开发形式，提供一个活动入口页面。主要使用Zepto,html5,css3等技术开发。</p>
 		            </li>
@@ -195,7 +205,7 @@
 		            <li>
 		                <p>支付宝无线商户签约平台</p>
 		                <p>简介：承担全部html,css,js编写工作。运用技术主要有：html，css2，原生js，支付宝js框架arale。</p>
-		            </li>
+		            </li> -->
 		        </ul>
 		    </div>
 
