modified resume pages

--- a/resume.html
+++ b/resume.html
@@ -206,6 +206,12 @@
 		                <p>支付宝无线商户签约平台</p>
 		                <p>简介：承担全部html,css,js编写工作。运用技术主要有：html，css2，原生js，支付宝js框架arale。</p>
 		            </li> -->
+		            <li><a href="http://forester2.vizzhost.com/max_yu/canidae/hk/index.html">项目一地址</a></li>
+		            <li><a href="http://forester2.vizzhost.com/evolve/catalog/index.php">项目二地址</a></li>
+		            <li><a href="http://www.52retail.com/">项目三地址</a></li>
+		            <li><a href="http://forester3.vizzhost.com/max_yu/bucie_mobile/index.html">项目四地址</a></li>
+		            <li><a href="http://forester2.vizzhost.com/dreamventions/html20131018/index.php ">项目五地址</a></li>
+		            <li><a href="http://forester2.vizzhost.com/max_yu/dms/index.html">项目六地址</a></li>
 		        </ul>
 		    </div>
 
