--- a/resume.html
+++ b/resume.html
@@ -206,7 +206,10 @@
 		                <p>支付宝无线商户签约平台</p>
 		                <p>简介：承担全部html,css,js编写工作。运用技术主要有：html，css2，原生js，支付宝js框架arale。</p>
 		            </li> -->
-		            <li><a href="http://forester2.vizzhost.com/max_yu/canidae/hk/index.html">项目一地址</a></li>
+		            <li>
+		            	<p><a target="_blank" href="http://forester2.vizzhost.com/max_yu/canidae/hk/index.html">香港Canidae集团官方网站</a></p>
+		        		<p class="itemIntro">简介：客户对设计的美感要求比较高，一再改动易稿，最后在时间非常仓促的情况下顶住压力，快速而准确的重构页面。主要通过html5,css3等技术大进行动作模拟，页面具备很流畅的交互体验。</p>
+		            </li>
 		            <li><a href="http://forester2.vizzhost.com/evolve/catalog/index.php">项目二地址</a></li>
 		            <li><a href="http://www.52retail.com/">项目三地址</a></li>
 		            <li><a href="http://forester3.vizzhost.com/max_yu/bucie_mobile/index.html">项目四地址</a></li>
