--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@ layout: default_index
 
 <div id="main_content">
 
-	<h1>最新文章</h1>
+	<!-- <h1>最新文章</h1> -->
 
-	<ul class="index_list">
+
+
+	<!-- 全部列表一起输出 -->
+
+<!-- 	<ul class="index_list">
 	    {% for post in site.posts %}
 	        <li>
 	        	<a href="{{ site.url }}{{ post.url }}">
@@ -20,6 +24,35 @@ layout: default_index
 	        	</a>	
 	        </li>
 	    {% endfor %}
+	</ul> -->
+
+
+
+
+	<!-- 按年份输出列表 -->
+	<ul class="index_list">
+		{% for post in site.posts %}
+
+
+		   {% unless post.next %}
+		        <h1 class="index_global_year_title">{{ post.date | date: '%Y' }}</h1>
+		   {% else %}
+		        {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+		        {% capture nyear %}{{ post.next.date | date: '%Y' }}{% endcapture %}
+		        {% if year != nyear %}
+		        <h1 class="index_global_year_title">{{ post.date | date: '%Y' }}</h1>
+		        {% endif %}
+		   {% endunless %}
+
+		   <li>
+		        <a href="{{ post.url }}">
+		       		<span>{{ post.title }}</span>
+		       		<!-- <span class="index_list_date"><span> - - - - </span>{{ post.date | date_to_string }}</span> -->
+		       		<span class="index_list_date"><span> - - - - </span>{{ post.date | date:"%m-%d" }} </span>
+		        </a>
+		        <!-- <span class="datetime">{{ post.date | date:"%m-%d" }} </span> -->
+		   </li>
+		{% endfor %}
 	</ul>
 
 </div>
